--- a/package.json
+++ b/package.json
@@ -1,43 +1,18 @@
 {
-  "private": true,
-  "name": "my-project",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "build": "preact build",
-    "serve": "sirv build --port 5000 --cors --single",
-    "dev": "PORT=5000 preact watch",
-    "test": "jest",
-    "format": "prettier --write .",
-    "lint": "prettier --check ."
-  },
-  "eslintConfig": {
-    "extends": "preact",
-    "ignorePatterns": [
-      "build/"
-    ]
-  },
-  "devDependencies": {
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-preact-pure": "^2.0.0",
-    "eslint": "^6.0.1",
-    "eslint-config-preact": "^1.1.0",
-    "jest": "^24.9.0",
-    "jest-preset-preact": "^1.0.0",
-    "preact-cli": "^3.0.0",
-    "sirv-cli": "1.0.3"
-  },
-  "dependencies": {
-    "preact": "^10.3.2",
-    "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1",
-    "prettier": "^2.5.1"
-  },
-  "jest": {
-    "preset": "jest-preset-preact",
-    "setupFiles": [
-      "<rootDir>/tests/__mocks__/browserMocks.js",
-      "<rootDir>/tests/__mocks__/setupTests.js"
-    ]
-  }
+	"private": true,
+	"scripts": {
+		"start": "wmr",
+		"build": "wmr build --prerender",
+		"serve": "wmr serve"
+	},
+	"eslintConfig": {
+		"extends": "preact"
+	},
+	"dependencies": {
+		"preact": "^10.6.4",
+		"preact-iso": "^2.3.0"
+	},
+	"devDependencies": {
+		"wmr": "^3.7.2"
+	}
 }
